--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
     "learningrouting": "file:",
     "react": "^18.3.1",
